configure wallet provider api
